tests/rosetta/out/Zig/barnsley-fern.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenbarnsley-fern3710293755/001/prog.zig:53:13: error: local variable is never mutated
/tmp/TestMochiZigGoldenbarnsley-fern3710293755/001/prog.zig:53:13: note: consider using 'const'
